--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,10 +53,11 @@
             android:theme="@style/NoTitleTheme">
 
         </activity>
+
         <activity
             android:name=".ui.activity.SpecialActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme">
+            android:theme="@style/BlackAppTheme">
 
         </activity>
         <activity
@@ -82,6 +83,13 @@
 
         <activity
             android:name=".ui.activity.GoodsDetailActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/NoTitleTheme">
+
+        </activity>
+
+        <activity
+            android:name=".ui.activity.MyAddressActivity"
             android:screenOrientation="portrait"
             android:theme="@style/NoTitleTheme">
 
