--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,12 @@ android {
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
+
+
+        compileOptions{
+            sourceCompatibility JavaVersion.VERSION_1_8
+            targetCompatibility JavaVersion.VERSION_1_8
+        }
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
